Clear Firebase config values for security
Removed sensitive Firebase configuration values from inline config.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -556,13 +556,13 @@
     // Prefer an external, non-committed config file `Frontend/firebase-config.js` that
     // sets `window.firebaseConfig`. If not present, fall back to the inline config.
     const inlineFirebaseConfig = {
-      apiKey: "AIzaSyCx3PDoX4KB3rcEn8Dj94fiOguzHKRoai0",
-      authDomain: "smarthome-6e1fa.firebaseapp.com",
-      databaseURL: "https://smarthome-6e1fa-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "smarthome-6e1fa",
-      storageBucket: "smarthome-6e1fa.firebasestorage.app",
-      messagingSenderId: "941764532767",
-      appId: "1:941764532767:web:9806c26c4541af13a9132a"
+      apiKey: "",
+      authDomain: "",
+      databaseURL: "",
+      projectId: "",
+      storageBucket: "",
+      messagingSenderId: "",
+      appId: ""
     };
 
     const firebaseConfig = window.firebaseConfig || inlineFirebaseConfig;
